<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.sakrafux</groupId>
	<artifactId>java-springboot-layered</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>java-springboot-layered</name>
	<description>RealWorld Backend Implementation using Java Spring Boot and Layered Architecture</description>
	
	<properties>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<lombok.version>1.18.44</lombok.version>
		<jacoco.version>0.8.14</jacoco.version>
		<jwt.version>0.13.0</jwt.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
	</properties>
	
	<dependencies>
		<!-- ==================================================================== -->
		<!-- Spring Boot Starters                                                 -->
		<!-- Core dependencies providing web, data access, security, and          -->
		<!-- bean validation capabilities out-of-the-box.                         -->
		<!-- ==================================================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- ==================================================================== -->
		<!-- Security / JSON Web Tokens (JWT)                                     -->
		<!-- Libraries required to generate and validate JWTs for stateless       -->
		<!-- authentication (as specified by the RealWorld API requirements).     -->
		<!-- ==================================================================== -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- ==================================================================== -->
		<!-- Database Drivers                                                     -->
		<!-- H2 is used for local development and fast testing. PostgreSQL is     -->
		<!-- configured for production deployments.                               -->
		<!-- ==================================================================== -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- ==================================================================== -->
		<!-- Utilities (Code Generation)                                          -->
		<!-- Lombok reduces boilerplate (getters, setters, builders).             -->
		<!-- MapStruct provides type-safe mapping between Entities and DTOs.      -->
		<!-- ==================================================================== -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- ==================================================================== -->
		<!-- Testing                                                              -->
		<!-- Starter packs providing JUnit 5, Mockito, AssertJ, and utilities     -->
		<!-- like MockMvc for controller integration testing.                     -->
		<!-- ==================================================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- ==================================================================== -->
		<!-- Directory Configuration                                              -->
		<!-- Enables IntelliJ to correctly mark the folders if it doesn't work    -->
		<!-- automatically.                                                       -->
		<!-- ==================================================================== -->
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<!-- Allows @project.basedir@ in application.yml -->
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<plugins>
			<!-- 
				Spring Boot Maven Plugin: 
				Repackages the application as an executable "fat" JAR. 
				Also configured to exclude Lombok from the final artifact, as it's only needed at compile-time.
			-->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- 
				Maven Compiler Plugin: 
				Compiles Java sources. Specifically configured to register annotation processors 
				for both MapStruct and Lombok. The 'lombok-mapstruct-binding' ensures that 
				MapStruct can use Lombok's generated builders/getters during the mapping generation.
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${lombok-mapstruct-binding.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- 
				Maven Failsafe Plugin: 
				Dedicated plugin for executing Integration Tests (classes ending in *IT). 
				Runs during the 'integration-test' and 'verify' phases.
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- 
				JaCoCo Maven Plugin: 
				Java Code Coverage tool. Attaches an agent to the JVM during tests to record 
				execution data and generates a coverage report (usually in target/site/jacoco).
				The multiple agents ensure both unit and integration test coverage is gathered.
			-->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/jacoco.exec</destFile>
							<append>true</append>
						</configuration>
					</execution>
					<execution>
						<id>prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/jacoco.exec</destFile>
							<append>true</append>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/jacoco.exec</dataFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
